<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PrivateResource">
    <string name="_1300_sq_ft">1300 sq.ft</string>
    <string name="_16">16</string>
    <string name="_1_months_ago">1 Months Ago</string>
    <string name="_2">2</string>
    <string name="_2021">2021</string>
    <string name="_264_carson_street_usa_ky_40539">264, Carson Street USA,KY 40539</string>
    <string name="_389_pete_pascale_pi">389 Pete Pascale PI</string>
    <string name="_4">4</string>
    <string name="_45_13215_465">+45 13215 465</string>
    <string name="_512_reviews">512 Reviews</string>
    <string name="_517">517</string>
    <string name="_5_new_notification">Нет новых уведомлений</string>
    <string name="_7_8">7.8</string>
    <string name="_84">84</string>
    <string name="_960_00">$960.00</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="active_nlistings">"Active
Listings"</string>
    <string name="add_listing">Add Listing</string>
    <string name="add_rating">Add Rating</string>
    <string name="add_review">Add Review</string>
    <string name="address">Address</string>
    <string name="agent">Агент</string>
    <string name="air_conditioning">Air Conditioning</string>
    <string name="already_a_member">Already a member?</string>
    <string name="amenities">Amenities</string>
    <string name="amentities">Amentities</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Перспектива24-Курган</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_ready_to_nbe_a_part_of_the_family">Все поля обязательны для заполнения</string>
    <string name="area_size_sq_ft">Area Size (Sq.ft)</string>
    <string name="area_sq_ft">Area(Sq.ft)</string>
    <string name="balcony">Балкон</string>
    <string name="bathroom">Санузел</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="best_deals">Best Deals</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="buy">Buy</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="city">City</string>
    <string name="clear_all">Удалить все</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="confirm_password">Подтверждение пароля</string>
    <string name="country">Country</string>
    <string name="delete">Delete</string>
    <string name="describe_your_experience">Текст отзыва</string>
    <string name="description">Description</string>
    <string name="details">Описание</string>
    <string name="discover_your_ndream_flat_here">Откройте для себя квартиру своей мечты прямо сейчас</string>
    <string name="dummy_text_without_list">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. In finibus libero ac euismod efficitur. Etiam non sem pretium, scelerisque felis at, mattis quam. Nam quam leo, sollicitudin a nulla sed, suscipit molestie leo.

 Nullam vulputate laoreet pretium. Sed ac ante risus. Vestibulum eleifend sem ut mauris interdum fringilla. Nulla sed ullamcorper arcu. Donec ut mi venenatis, hendrerit tellus nec, accumsan felis. Nunc augue ex, consequat sed hendrerit in, feugiat sit amet leo. Duis in neque at risus dictum scelerisque. Morbi ac ligula quis erat congue vestibulum. Morbi bibendum mattis condimentum. Nulla enim mi, bibendum ac porta id, gravida quis libero.

Morbi auctor metus enim, ut pretium mauris rutrum non. Nunc pretium lacinia luctus. Mauris eu urna vel mi tempor molestie. Integer nec mi massa. Proin ac mauris lacus. Vestibulum mattis aliquam sapien ut pulvinar. Aenean euismod nisl et leo aliquet, at placerat massa pulvinar."</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ellipsis">…</string>
    <string name="email_address">Электронная почта/логин</string>
    <string name="email_address1">Электронная почта</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="favorite">Favorite</string>
    <string name="featured">Рекомендуем</string>
    <string name="featured_property">Featured Property</string>
    <string name="find_your_dream_apartment">Процент по ипотеке ниже, чем в банках</string>
    <string name="find_your_dream_house_with_us">Бесплатные оценка и подбор объектов</string>
    <string name="find_your_dream_commerce_with_us">Более 113 городов присутствия</string>
    <string name="follow_on_instagram">Follow on Instagram</string>
    <string name="for_sale">For Sale</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="full_name">Имя</string>
    <string name="fullname">Fullname</string>
    <string name="garage">Garage</string>
    <string name="h642">H642</string>
    <string name="hello_there">Hello There!</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="ketty_nelson">Ketty Nelson</string>
    <string name="lawn">Lawn</string>
    <string name="let_s_get_started">Давайте начнем</string>
    <string name="let_s_sign_you_in">Вход</string>
    <string name="listing">Listing</string>
    <string name="log_in">Войти</string>
    <string name="log_in_or_register">Вход/регистрация</string>
    <string name="log_out">Log Out</string>
    <string name="login_now">Login now.</string>
    <string name="london_b400_b7hf_cross_road">London,B400 B7hF Cross Road</string>
    <string name="aboutFlat">Бесплатные оценка и подбор объектов из нашей базы.</string>
    <string name="m3_ref_typeface_brand_display_regular">sans-serif</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_typescale_body_large_font">sans-serif</string>
    <string name="m3_sys_typescale_body_medium_font">sans-serif</string>
    <string name="m3_sys_typescale_body_small_font">sans-serif</string>
    <string name="m3_sys_typescale_display_large_font">sans-serif</string>
    <string name="m3_sys_typescale_display_medium_font">sans-serif</string>
    <string name="m3_sys_typescale_display_small_font">sans-serif</string>
    <string name="m3_sys_typescale_headline_large_font">sans-serif</string>
    <string name="m3_sys_typescale_headline_medium_font">sans-serif</string>
    <string name="m3_sys_typescale_headline_small_font">sans-serif</string>
    <string name="m3_sys_typescale_label_large_font">sans-serif-medium</string>
    <string name="m3_sys_typescale_label_medium_font">sans-serif-medium</string>
    <string name="m3_sys_typescale_label_small_font">sans-serif-medium</string>
    <string name="m3_sys_typescale_title_large_font">sans-serif</string>
    <string name="m3_sys_typescale_title_medium_font">sans-serif-medium</string>
    <string name="m3_sys_typescale_title_small_font">sans-serif-medium</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="please_enter_your_nemail_to_reset_your_password">"Please enter your
email to reset your password"</string>
    <string name="rate_the_seller">Ваша оценка</string>
    <string name="sign_up">Регистрация</string>
    <string name="submit">Подтвердить</string>
    <string name="submit_review">Отправить</string>
    <string name="todo">todo</string>
    <string name="phone">Номер телефона</string>
    <string name="welcome_back_yo_ve_nbeen_missed">С возвращением!</string>
    <string name="write_a_review">Написать отзыв</string>
    <string name="write_here">Пишите здесь</string>
    <string name="intuit">Intuit</string>
    <string name="love">♡</string>
    <string name="u">U</string>
    <string name="rateUs">Rate us so we can grow and help more people get their finances in check</string>
    <string name="rate">★★★★★</string>
    <string name="rate1">Rate</string>
    <string name="notification">Уведомления</string>
    <string name="noConnection">Нет соединения с интернетом</string>
    <string name="check">Проверьте подключение к интернету и попробуйте еще раз</string>
    <string name="repeat">Повторить</string>
    <string name="share">Поделиться</string>
    <string name="like">В избранное</string>
</resources>