<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/action_notification"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notification"
        app:iconTint="@color/white"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        android:visible="false"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_like"
        android:icon="@drawable/ic_like"
        android:title="@string/like"
        android:visible="false"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
</menu>