<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@id/give_us_a_review_landmine_main_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="43.0dip"
            android:paddingTop="50.0dip"
            android:paddingRight="43.0dip"
            android:paddingBottom="27.0dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intuit"
                android:textColor="@android:color/black"
                android:textSize="40.0sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10.0dip"
                android:orientation="horizontal"
                android:paddingBottom="15.0dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/love"
                    android:textColor="#ffed6c27"
                    android:textSize="70.0sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/u"
                    android:textColor="@android:color/black"
                    android:textSize="70.0sp" />
            </LinearLayout>

            <TextView
                android:id="@id/give_us_a_review_landmine_text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="12.0dip"
                android:text="@string/rateUs"
                android:textColor="@android:color/black"
                android:textSize="16.0sp" />

            <TextView
                android:id="@id/give_us_a_review_landmine_text_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/rate"
                android:textColor="#ff747474"
                android:textSize="22.0sp"
                android:textStyle="bold" />

            <Button
                android:id="@id/give_us_a_review_landmine_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25.0dip"
                android:background="#ff0ac775"
                android:gravity="center"
                android:includeFontPadding="false"
                android:minWidth="120.0dip"
                android:padding="8.0dip"
                android:singleLine="true"
                android:text="@string/rate1"
                android:textColor="@android:color/white"
                android:textSize="15.0sp"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>