<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:tag="layout/fragment_forget_password_0">

    <include
        android:id="@id/toolbar"
        layout="@layout/toolbar_dark_arrow" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_alignParentBottom="true"
        android:alpha="0.2"
        android:contentDescription="@string/todo"
        android:scaleType="fitEnd"
        android:src="@drawable/ic_bottom" />

    <LinearLayout
        android:id="@id/layout_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="@dimen/section_spacing">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/variant"
            android:textSize="@dimen/text_size_h2"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:lineSpacingMultiplier="1.2"
            android:paddingTop="@dimen/inner_spacing"
            android:text="@string/please_enter_your_nemail_to_reset_your_password"
            android:textColor="@color/variant"
            android:textSize="@dimen/text_size_h3" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/layout_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_header"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/section_spacing">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/section_spacing"
            android:layout_marginBottom="@dimen/inner_spacing"
            app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
            app:boxCornerRadiusBottomStart="@dimen/_5sdp"
            app:boxCornerRadiusTopEnd="@dimen/_5sdp"
            app:boxCornerRadiusTopStart="@dimen/_5sdp"
            app:boxStrokeWidth="0.0dip"
            app:boxStrokeWidthFocused="0.0dip"
            app:hintEnabled="false">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_border_edittext"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/textHintColor"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_size_h5" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@id/button_submit"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/section_spacing"
            android:layout_marginBottom="@dimen/section_spacing"
            android:backgroundTint="@color/variant"
            android:insetTop="0.0dip"
            android:insetBottom="0.0dip"
            android:tag="binding_1"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_h6"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_5sdp"
            app:elevation="0.0dip" />
    </LinearLayout>
</RelativeLayout>